# d-buddy

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  current  d-buddy.log.2025-11-25  d-buddy.log.2025-11-26  guidance.md  instructions.md  perf.data.old  pkgbuild  tasks.md
.github/workflows/: aur-publish.yml
docs/: architecture.md
src/: bus.rs  config.rs  event.rs  main.rs  state.rs  ui.rs
