[package]
name = "d-buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.28.0", features = ["all-widgets"] }
zbus = "5.12.0"
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"
crossterm = { version = "0.28.0", features = ["event-stream"] }
anyhow = "1.0.100"
tui-input = "0.13.0"
arboard = "3.4.0"
